feat: add endpoints to history
