# routes/api.php
@@ -43,6 +43,8 @@ Route::prefix('v1')->group(function () {
         Route::get('/tables/{tableId}/orders', [OrderController::class, 'indexByTable']);
         Route::get('/mozo/{nombreMozo}/orders', [OrderController::class, 'mozoOrders']);
         Route::post('/orders', [OrderController::class, 'store']);
+        Route::get('/orders/history', [OrderController::class, 'history']);
+        Route::get('/orders/{orderId}/print', [OrderController::class, 'printTicket']);
         Route::get('/orders/{orderId}', [OrderController::class, 'show']);
         Route::put('/orders/{orderId}', [OrderController::class, 'update']);
         Route::post('/orders/{orderId}/pay', [OrderController::class, 'pay']);
